Fix the scrollbars

--- a/src/index.css
+++ b/src/index.css
@@ -19,6 +19,36 @@
   color: var(--light);
 }
 
+/* Scroll bars */
+::-webkit-scrollbar {
+  background-color: inherit;
+  width: 0.5rem;
+  border: none;
+}
+
+/* background of the scrollbar except button or resizer */
+::-webkit-scrollbar-track {
+  background-color: transparent;
+}
+
+/* scrollbar itself */
+::-webkit-scrollbar-thumb {
+  background-color: var(--darkish);
+  border-radius: 1rem;
+  /* border: 5px solid var(--dark); */
+  width: 0.5rem;
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background-color: var(--dark-x1_5);
+  /* border: 4px solid #f4f4f4 */
+}
+
+/* set button(top and bottom of the scrollbar) */
+::-webkit-scrollbar-button {
+  display: none
+}
+
 /* Layout */
 .flex {
   display: flex;
@@ -540,9 +570,23 @@ h6 {
   border: 0.5px solid var(--darkish);
 }
 
+.sidebar .logo-header {
+  border-bottom: 0.5px solid var(--darkish);
+}
+
 .scrollview {
   background-color: inherit;
   overflow-y: scroll;
+  overflow-x: hidden;
+}
+
+.scrollview .card {
+  border-right: none;
+}
+
+.scrollview::-webkit-scrollbar,
+.scrollview::-webkit-scrollbar-track {
+  background-color: var(--dark);
 }
 
 /* Channel card */
@@ -571,4 +615,9 @@ h6 {
 
 .playlist-item-card .card-body {
   overflow-y: scroll;
+}
+
+.content-area .card {
+  border: 1px solid var(--darkish);
+  border-radius: 2.5px;
 }
